# 2D-Traffic-control

./: .gitignore  AGENTS.md  Push-Changes.ps1  README.md  Start-Editor.ps1  Start-Game.ps1  Start-Tests.ps1  Update-Repo.ps1  index.html  package-lock.json  package.json  start-dev.mjs  tsconfig.json  vite.config.stable.ts  vite.config.ts
.cursor/plans/: traffic_control_2d_game_4bcdb257.plan.md
scripts/: Windows-RustEnv.ps1  cloud-agent-env-setup.sh  setup-cloud-env.sh
src/: game.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/map/: building_loader.rs  building_network.rs  city_map.rs  mod.rs  osm_loader.rs  road_network.rs  tram_network.rs  world_editor.rs
src-tauri/src/simulation/: bezier_smooth.rs  congestion.rs  idm.rs  lane_change.rs  mod.rs  od_model.rs  pathfinding.rs  sim_loop.rs  spatial_grid.rs  spawn.rs  speed_config.rs  tram_sim.rs
src-tauri/src/time/: day_cycle.rs  game_clock.rs  mod.rs
src-tauri/src/traffic/: intersection.rs  mod.rs  phased_traffic_light.rs  traffic_light.rs
src-tauri/src/vehicles/: driver.rs  mod.rs  types.rs  vehicle.rs
src/audio/: TrafficAudioSystem.ts
src/bridge/: commands.test.ts  commands.ts  events.test.ts  events.ts
src/constants/: stopLine.ts
src/map/: MapBboxPicker.ts  MapLibreSetup.ts
src/rendering/: BuildingRenderer.ts  CameraManager.ts  CongestionRenderer.ts  EditorOverlay.ts  InfraRenderer.ts  PixiOverlay.ts  RoadRenderer.ts  TrafficLightRenderer.ts  (+2 more)
(+5 files in other folders)
